--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                     <h5 class="card-title">@Html.DisplayFor(x => item.NAME_FILM)</h5>
                     <p class="card-text">Жанр: @Html.DisplayFor(x => item.GENRES.NAME_GENRE)</p>
                     <p class="card-text">Год: @Html.DisplayFor(x => item.YEAR_FILMS)</p>
-                    <a href="#" class="btn btn-primary float-right">Read more</a>
+                    <a href="Read/?id=@item.FILM_ID" class="btn btn-primary float-right">Описание</a>
                 </div>
             </div>
         }
