--- a/WebApplication1/WebApplication1/Views/Home/ShowAllDataFromDb.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/ShowAllDataFromDb.cshtml
@@ -46,7 +46,7 @@
                     <p class="card-text">Год выхода фильма: @Html.DisplayFor(x => item.YEAR_FILMS)</p>
                     <div class="float-right">
                         <a href="Update/?id=@item.FILM_ID" class="btn btn-success">Редактировать</a>
-                        <a href="#" class="btn btn-danger">Удалить</a>
+                        <a href="Delete/?id=@item.FILM_ID" class="btn btn-danger">Удалить</a>
                     </div>
                 </div>
             </div>
