--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <a class="nav-link" href="~/Home/Index">Home </a>
+            <a class="nav-link" href="~/Home/Index">Домой</a>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                 </li>
@@ -33,9 +33,9 @@
                     }
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <form class="form-inline my-2 my-lg-0"  method="post" action="/Home/Search">
+                <input class="form-control mr-sm-2" type="search" name="search" placeholder="Поиск..." aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
                 @if (Session["login"] != null)
                 {
                     if (Session["login"].ToString() == "Admin")
