Приступил к выполнению запросов

--- a/WebApplication1/WebApplication1/Views/Home/CRUD.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/CRUD.cshtml
@@ -28,7 +28,10 @@
                     <a class="nav-link" href="~/Home/ShowAllDataFromDb">Все данные</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Добавить</a>
+                    <a class="nav-link active" href="#">Добавить</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Home/FilmByCountry">Поиск фильма по стране</a>
                 </li>
             </ul>
         </div>
