--- a/WebApplication1/WebApplication1/Views/Home/ShowAllDataFromDb.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/ShowAllDataFromDb.cshtml
@@ -25,10 +25,13 @@
                     <a class="nav-link" href="~/Home/Index">Домой</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Home/ShowAllDataFromDb">Все данные</a>
+                    <a class="nav-link active" href="~/Home/ShowAllDataFromDb">Все данные</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="~/Home/CRUD">Добавить</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Home/FilmByCountry/?search=''">Поиск фильма по стране</a>
                 </li>
             </ul>
         </div>
