Приступил к выполнению запросов #2

--- a/WebApplication1/WebApplication1/Views/Home/CRUD.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/CRUD.cshtml
@@ -33,6 +33,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="~/Home/FilmByCountry">Поиск фильма по стране</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Home/StatistickByGenre">Статистика по жанрам</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Home/StatByCountries">Статистика по фильмам</a>
+                </li>
             </ul>
         </div>
     </nav>
