--- a/WebApplication1/WebApplication1/Views/Home/FilmByCountry.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/FilmByCountry.cshtml
@@ -34,6 +34,12 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="~/Home/FilmByCountry">Поиск фильма по стране</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Home/StatistickByGenre">Статистика по жанрам</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Home/StatByCountries">Статистика по фильмам</a>
+                </li>
             </ul>
         </div>
     </nav>
