--- a/WebApplication1/WebApplication1/Views/Home/ShowAllDataFromDb.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/ShowAllDataFromDb.cshtml
@@ -31,7 +31,13 @@
                     <a class="nav-link" href="~/Home/CRUD">Добавить</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Home/FilmByCountry/?search=''">Поиск фильма по стране</a>
+                    <a class="nav-link" href="~/Home/FilmByCountry/">Поиск фильма по стране</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Home/StatistickByGenre">Статистика по жанрам</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Home/StatByCountries">Статистика по фильмам</a>
                 </li>
             </ul>
         </div>
