--- a/WebApplication1/WebApplication1/Views/Home/ShowAllDataFromDb.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/ShowAllDataFromDb.cshtml
@@ -39,6 +39,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="~/Home/StatByCountries">Статистика по фильмам</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Home/Document">Документ</a>
+                </li>
             </ul>
         </div>
     </nav>
