--- a/WebApplication1/WebApplication1/Views/Home/CountBronFilms.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/CountBronFilms.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
 }
-
+@model IEnumerable<WebApplication1.Models.BronFilmModel>
 
 <!DOCTYPE html>
 
@@ -9,7 +9,7 @@
 <head>
     <head>
         <meta name="viewport" content="width=device-width" />
-        <title>Поиск фильма по стране</title>
+        <title>Забронированные фильмы</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
 </head>
@@ -37,8 +37,6 @@
                         <a class="dropdown-item" href="~/Home/FilmByCountry/">Поиск фильма по стране</a>
                         <a class="dropdown-item" href="~/Home/StatistickByGenre">Статистика по жанрам</a>
                         <a class="dropdown-item" href="~/Home/StatByCountries">Статистика по фильмам</a>
-                        <a class="dropdown-item" href="~/Home/CountBronFilms">Забронированные фильмы</a>
-                        <a class="dropdown-item" href="~/Home/FinalQuery">Доход с фильмов</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -49,18 +47,28 @@
     </nav>
 
     <div class="container">
-        <h1>Поиск фильма по стране</h1>
-        <form method="post" action="/Home/ResSearchFilmByCountry">
-            <div class="form-row">
-                <div class="col-9">
-                    <input type="text" name="search" class="form-control" placeholder="Страна">
-                </div>
-                <div class="col">
-                    <button type="submit" class="btn btn-primary">Выполнить</button>
-                </div>
-            </div>
-        </form>
+        <h1>Статистика</h1>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Страна</th>
+                    <th scope="col">Фильм</th>
+                    <th scope="col">Количество</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.NameCountry</td>
+                        <td>@item.NameFilm</td>
+                        <td>@item.Count</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
