--- a/WebApplication1/WebApplication1/Views/Home/FinalQuery.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/FinalQuery.cshtml
@@ -1,16 +1,17 @@
 ﻿@{
     Layout = null;
 }
-
-@model WebApplication1.FILMS
+@model IEnumerable<WebApplication1.Models.FinalModel>
 
 <!DOCTYPE html>
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>CRUD</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <head>
+        <meta name="viewport" content="width=device-width" />
+        <title>Доход</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    </head>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -28,7 +29,7 @@
                     <a class="nav-link" href="~/Home/ShowAllDataFromDb">Все данные</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Добавить</a>
+                    <a class="nav-link" href="~/Home/CRUD">Добавить</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Запросы</a>
@@ -47,52 +48,29 @@
         </div>
     </nav>
 
-
     <div class="container">
-        @using (Html.BeginForm("AddFilm", "Home", FormMethod.Post))
-        {
-            <div class="form-group">
-                @Html.LabelFor(model => model.NAME_FILM, "Название фильма: ")
-                @Html.TextBoxFor(model => model.NAME_FILM, new { @class = "form-control", required = "required" })
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ID_COUNTRY, "Страна: ")
-                @Html.DropDownListFor(model => model.ID_COUNTRY, ViewBag.Country as SelectList, new { @class = "form-control" })
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ID_GENRE, "Жанр фильма: ")
-                @Html.DropDownListFor(model => model.ID_GENRE, ViewBag.Genres as SelectList, new { @class = "form-control" })
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ID_STUDIA, "Студия: ")
-                @Html.DropDownListFor(model => model.ID_STUDIA, ViewBag.Studies as SelectList, new { @class = "form-control" })
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.YEAR_FILMS, "Год фильма: ")
-                @Html.TextBoxFor(model => model.YEAR_FILMS, new { @class = "form-control", type = "number", required = "required" })
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.LENGTH_FILM, "Длительность: ")
-                @Html.TextBoxFor(model => model.LENGTH_FILM, new { @class = "form-control", type = "number", required = "required" })
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.RATING, "Рейтинг: ")
-                @Html.TextBoxFor(model => model.RATING, new { @class = "form-control", type = "number", required = "required" })
-            </div>
-
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary float-right">Добавить</button>
-            </div>
-            <p class="text-success">@Session["added"]</p>
-
-        }
+        <h1>Статистика</h1>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Название фильма</th>
+                    <th scope="col">Доход в рублях</th>
+                    <th scope="col">Количество</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.NameFilm</td>
+                        <td>@item.Summa</td>
+                        <td>@item.Count</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
