--- a/WebApplication1/WebApplication1/Views/Home/StatByCountries.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/StatByCountries.cshtml
@@ -31,14 +31,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="~/Home/CRUD">Добавить</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="~/Home/FilmByCountry">Поиск фильма по стране</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Запросы</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="~/Home/FilmByCountry/">Поиск фильма по стране</a>
+                        <a class="dropdown-item" href="~/Home/StatistickByGenre">Статистика по жанрам</a>
+                        <a class="dropdown-item" href="~/Home/StatByCountries">Статистика по фильмам</a>
+                        <a class="dropdown-item" href="~/Home/CountBronFilms">Забронированные фильмы</a>
+                        <a class="dropdown-item" href="~/Home/FinalQuery">Доход с фильмов</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Home/StatistickByGenre">Статистика по жанрам</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link  active" href="~/Home/StatByCountries">Статистика по фильмам</a>
+                    <a class="nav-link" href="~/Home/Document">Документ</a>
                 </li>
             </ul>
         </div>
@@ -64,6 +68,8 @@
             </tbody>
         </table>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
