Проверка логина при регистрации

--- a/WebApplication1/WebApplication1/Views/Home/Registration.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Registration.cshtml
@@ -18,5 +18,7 @@
         <input type="hidden" name="role" value="0" class="form-control">
     </div>
     <button type="submit" class="btn btn-primary float-right">Зарегистрироваться</button>
+
+    <p class="text-danger">@Session["username_exist"]</p>
 </form>
 
