Доделал формирование документа

--- a/WebApplication1/WebApplication1/Views/Home/CRUD.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/CRUD.cshtml
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Добавить</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/LISTJOBS/Index">Добавить к фильму режиссера</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Запросы</a>
                     <div class="dropdown-menu">
