Добавил проверку на покупку билета

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 <h1 class="text-center display-4">Фильмы</h1>
 
 <div class="container">
+    <p class="text-danger">@Session["existPlace"]</p>
     <div class="row">
         @foreach (var item in Model)
         {
