--- a/WebApplication1/WebApplication1/Views/Home/BuyTicket.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/BuyTicket.cshtml
@@ -21,12 +21,10 @@
         <div class="form-group">
             <label for="exampleFormControlSelect1">Место: </label>
             <select class="form-control" name="place" id="exampleFormControlSelect1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-                <option>6</option>
+                @for(int i = 1; i <= 30; i++)
+                {
+                    <option>@i</option>
+                }
             </select>
         </div>
 
@@ -40,7 +38,7 @@
         <div class="form-group">
             <button type="submit" class="btn btn-primary float-right">Принять</button>
         </div>
-        <p class="text-success">@Session["added"]</p>
+        
 
     }
 </div>
