Добавил запросы с Oracle db

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -26,9 +26,9 @@
                 </div>
             </div>
         }
-
-
     </div>
+
+    @Html.ActionLink("Тест", "TestOracle", "Home")
 </div>
 
 <!---->
