--- a/WebApplication1/WebApplication1/Views/Home/DohodFilmByDate.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/DohodFilmByDate.cshtml
@@ -45,7 +45,6 @@
                         <a class="dropdown-item" href="~/Home/CountBronFilms">Забронированные фильмы</a>
                         <a class="dropdown-item" href="~/Home/FinalQuery">Доход с фильмов</a>
                         <a class="dropdown-item" href="~/Home/FindWorkerById">Получить сотрудника по ID</a>
-                        <a class="dropdown-item" href="~/Home/DohodFilmByDate">Доход фильма за период</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -57,21 +56,24 @@
 
 
     <div class="container">
-        <h1 class="text-center display-4">Административная панель</h1>
-        <p class="text-success">@Session["updated"]</p>
-        @foreach (var item in Model)
-        {
-            <div class="card mb-2">
-                <div class="card-body">
-                    <h5 class="card-title">@Html.DisplayFor(x => item.NAME_FILM)</h5>
-                    <p class="card-text">Год выхода фильма: @Html.DisplayFor(x => item.YEAR_FILMS)</p>
-                    <div class="float-right">
-                        <a href="Update/?id=@item.FILM_ID" class="btn btn-success">Редактировать</a>
-                        <a href="Delete/?id=@item.FILM_ID" class="btn btn-danger">Удалить</a>
-                    </div>
+        <h1 class="text-center display-2">Введите ID сотрудника</h1>
+
+        <form method="post" action="/Home/Dohod">
+            <div class="">
+                <div class="form-group">
+                    <input type="text" name="film" class="form-control" placeholder="Фильм">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="date1" class="form-control" placeholder="Дата начала">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="date2" class="form-control" placeholder="Дата конец">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Выполнить</button>
                 </div>
             </div>
-        }
+        </form>
     </div>
 
 
