Добавил процедуры из Oracle

--- a/WebApplication1/WebApplication1/Views/Home/ResultQuery.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/ResultQuery.cshtml
@@ -57,8 +57,9 @@
 
     <div class="container">
         <h1 class="text-center display-4">Результат</h1>
-        <p class="text-success">@Session["resQuery"]</p>
-      
+        <div class="alert alert-info" role="alert">
+            @Session["resQuery"]
+        </div>
     </div>
 
 
