--- a/WebApplication1/WebApplication1/Views/Home/CalcYear.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/CalcYear.cshtml
@@ -60,21 +60,21 @@
 
 
     <div class="container">
-        <h1 class="text-center display-4">Административная панель</h1>
-        <p class="text-success">@Session["updated"]</p>
-        @foreach (var item in Model)
-        {
-            <div class="card mb-2">
-                <div class="card-body">
-                    <h5 class="card-title">@Html.DisplayFor(x => item.NAME_FILM)</h5>
-                    <p class="card-text">Год выхода фильма: @Html.DisplayFor(x => item.YEAR_FILMS)</p>
-                    <div class="float-right">
-                        <a href="Update/?id=@item.FILM_ID" class="btn btn-success">Редактировать</a>
-                        <a href="Delete/?id=@item.FILM_ID" class="btn btn-danger">Удалить</a>
-                    </div>
+        <h1 class="text-center display-2">Введите Фильм</h1>
+
+        <form method="post" action="/Home/getCalcYear">
+            <div class="">
+                <div class="form-group">
+                    <input type="text" name="film" class="form-control" placeholder="Фильм">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="fam" class="form-control" placeholder="Фамилия">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Выполнить</button>
                 </div>
             </div>
-        }
+        </form>
     </div>
 
 
