--- a/WebApplication1/WebApplication1/Views/Home/FindWorkerById.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/FindWorkerById.cshtml
@@ -45,6 +45,10 @@
                         <a class="dropdown-item" href="~/Home/CountBronFilms">Забронированные фильмы</a>
                         <a class="dropdown-item" href="~/Home/FinalQuery">Доход с фильмов</a>
                         <a class="dropdown-item" href="~/Home/FindWorkerById">Получить сотрудника по ID</a>
+                        <a class="dropdown-item" href="~/Home/DohodFilmByDate">Доход фильма за период</a>
+                        <a class="dropdown-item" href="~/Home/Actor">Режиссер и актер</a>
+                        <a class="dropdown-item" href="~/Home/LengthFilm">Получить длину фильма</a>
+                        <a class="dropdown-item" href="~/Home/CalcYear">Расчет возраста актера на момент выхода фильма</a>
                     </div>
                 </li>
                 <li class="nav-item">
